--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "geist": "^1.3.1",
+    "gsap": "^3.13.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^15.5.4",
+    "next": "^15.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "9.8.0",
@@ -58,9 +59,9 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
   "devDependencies": {
