--- a/package.json
+++ b/package.json
@@ -50,13 +50,15 @@
     "gsap": "^3.13.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^16.0.8",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
+    "react-server-dom-parcel": "^19.2.3",
+    "react-server-dom-webpack": "^19.2.3",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "swiper": "^12.0.3",
